--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.33.0",
+    "bootstrap": "5.1.3",
+    "chart.js": "^3.7.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-bootstrap": "^2.1.1",
+    "react-chartjs-2": "^4.0.1",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
@@ -16,6 +26,8 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.21",
     "typescript": "^4.4.2"
